Replace python_config.pl with python.pl following libpython-clj convention
- Rename configuration file from python_config.pl to python.pl
- Model after libpython-clj's python.edn configuration format
- Add multifile hooks: python_library_path_user/1, python_home/1, python_executable/1, python_verbose/1
- Support 3-tier configuration: user config -> LIBPYTHON_PATH env var -> auto-detection
- Fix multifile directives to use parentheses (required by Scryer Prolog)
- Rename internal getenv/2 to get_env_var/2 to avoid shadowing os:getenv/2
- Update .gitignore to exclude python.pl and .ediprolog-tmp files
- Remove .ediprolog-tmp files that should never have been tracked

Users now consult('python.pl') before loading the module to provide custom configuration.
See python.pl.example for usage examples.

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ target/
 .direnv/
 
 # User Python configuration
-python_config.pl
+python.pl
 
 libpython-clj/
 
@@ -113,3 +113,4 @@ libpython-clj/
 /tests/
 /tools/
 /wambook/
+.ediprolog-tmp
