Add CLAUDE.md and update .gitignore for Python virtual environments
- Move CLAUDE.md from docs/ to root (standard location)
- Add comprehensive development guidance including:
  - Python library configuration (python.pl system)
  - Scryer Prolog syntax requirements (multifile directives, etc.)
  - FFI debugging tips
  - Memory management patterns
- Add .venv/, venv/, env/ to .gitignore for Python virtual environments

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,11 @@ target/
 # User Python configuration
 python.pl
 
+# Python virtual environments
+.venv/
+venv/
+env/
+
 libpython-clj/
 
 # Scryer Prolog core files (not part of Python integration)
