--- a/examples/docker/Dockerfile
+++ b/examples/docker/Dockerfile
@@ -9,6 +9,7 @@ RUN apt-get update && apt-get install -y \
     git \
     build-essential \
     libssl-dev \
+    pkg-config \
     ca-certificates \
     && rm -rf /var/lib/apt/lists/*
 
