Fix macOS Homebrew Python library detection and test failures
- Add correct Homebrew Python Framework paths for arm64 and Intel
  - Apple Silicon: /opt/homebrew/opt/python@X.XX/Frameworks/...
  - Intel: /usr/local/opt/python@X.XX/Frameworks/...
- Keep fallback paths to /opt/homebrew/lib and /usr/local/lib
- Remove || true from CI tests so failures actually fail
- Tests now properly report when library can't be found

This fixes the error:
  existence_error(python_library,not_found)

The previous paths only checked /opt/homebrew/lib/libpython3.XX.dylib
which doesn't exist - Homebrew installs Python in Framework structure.

--- a/.github/workflows/test-macos-arm64.yml
+++ b/.github/workflows/test-macos-arm64.yml
@@ -52,19 +52,19 @@ jobs:
       - name: Run minimal FFI test
         run: |
           echo "=== Running minimal FFI test ==="
-          scryer-prolog manual_tests/test_arm64_minimal.pl || true
+          scryer-prolog manual_tests/test_arm64_minimal.pl
 
       - name: Run incremental FFI tests
         run: |
           echo "=== Running incremental FFI tests ==="
-          scryer-prolog manual_tests/test_arm64_incremental.pl || true
+          scryer-prolog manual_tests/test_arm64_incremental.pl
 
       - name: Run full arm64 test
         run: |
           echo "=== Running full arm64 test ==="
-          scryer-prolog manual_tests/test_macos_arm64_python312.pl || true
+          scryer-prolog manual_tests/test_macos_arm64_python312.pl
 
       - name: Run diagnostic tests
         run: |
           echo "=== Running diagnostic tests ==="
-          scryer-prolog manual_tests/test_arm64_diagnostics.pl || true
+          scryer-prolog manual_tests/test_arm64_diagnostics.pl
