Update to use jjtolton/scryer-prolog fork with RTLD_GLOBAL support
- Update INSTALL.md with detailed fork installation instructions
- Explain why RTLD_GLOBAL fork is needed (Python C extensions)
- Update both Dockerfiles to clone jjtolton/scryer-prolog:rtld-global-support
- Update Docker demo scripts to reference ScryPy instead of old names
- Update Docker README files with ScryPy branding and fork info
- Change GitHub API calls from mthom/scryer-prolog to jjtolton/scrypy

All Docker builds now use the fork for full NumPy/SciPy/pandas support.

--- a/examples/docker-conda/Dockerfile
+++ b/examples/docker-conda/Dockerfile
@@ -81,11 +81,11 @@ main :-
     py_run_simple_string("print()"),
 
     py_run_simple_string("import requests"),
-    py_run_simple_string("response = requests.get('https://api.github.com/repos/mthom/scryer-prolog')"),
-    py_run_simple_string("print(f'Scryer Prolog GitHub stars: {response.json()[\"stargazers_count\"]}')"),
+    py_run_simple_string("response = requests.get('https://api.github.com/repos/jjtolton/scrypy')"),
+    py_run_simple_string("print(f'ScryPy GitHub stars: {response.json()[\"stargazers_count\"]}')"),
     py_run_simple_string("print()"),
 
-    py_run_simple_string("print('🎉 Scryer-Python + Conda + NumPy: SUCCESS!')"),
+    py_run_simple_string("print('🎉 ScryPy + Conda + NumPy: SUCCESS!')"),
 
     py_finalize,
     halt.
