--- a/.github/workflows/test-documentation.yml
+++ b/.github/workflows/test-documentation.yml
@@ -21,12 +21,13 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y python3.11-dev libpython3.11
 
-      - name: Install Scryer Prolog
+      - name: Install Scryer Prolog (with RTLD_GLOBAL support)
         run: |
           curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
           source $HOME/.cargo/env
-          git clone https://github.com/mthom/scryer-prolog.git /tmp/scryer-prolog
+          git clone https://github.com/jjtolton/scryer-prolog.git /tmp/scryer-prolog
           cd /tmp/scryer-prolog
+          git checkout rtld-global-support
           cargo build --release
           sudo cp target/release/scryer-prolog /usr/local/bin/
           scryer-prolog -v
