Remove LIBPYTHON_PATH env var, enforce string API (v0.2.2)
Fixes #4 (properly this time)

BREAKING CHANGE: Removed LIBPYTHON_PATH environment variable

Following libpython-clj convention:
- libpython-clj uses python.edn config file, NOT custom env vars
- Only standard Python env var is PYTHONHOME
- We now match this: python.pl config file only, no custom env var

API Changes:
- python_library_path/1 returns STRING (double quotes)
- python_library_path_user/1 must use STRING (double quotes)
- All path handling uses strings consistently
- Removed LIBPYTHON_PATH environment variable support

Search order now:
1. py_initialize/1 override
2. python.pl config file (python_library_path_user/1)
3. Auto-detection

Documentation:
- Updated all examples to use double quotes for strings
- Updated INSTALL.md to remove Method 2 (env var)
- Updated python.pl.example with string syntax
- Updated PYTHON_ENVIRONMENTS.md examples

Credits: @sporeking, @triska

--- a/python.pl.example
+++ b/python.pl.example
@@ -27,29 +27,31 @@
 % This is the primary configuration - if set, it will be used
 % instead of auto-detection.
 %
+% IMPORTANT: Path must be a STRING (double quotes "..."), not an atom (single quotes '...')!
+%
 % Examples:
 %
 % % System Python 3.11 on Linux
-% python_library_path_user('/usr/lib/x86_64-linux-gnu/libpython3.11.so').
+% python_library_path_user("/usr/lib/x86_64-linux-gnu/libpython3.11.so").
 %
 % % Homebrew Python on macOS (Apple Silicon)
-% python_library_path_user('/opt/homebrew/lib/libpython3.11.dylib').
+% python_library_path_user("/opt/homebrew/lib/libpython3.11.dylib").
 %
 % % Homebrew Python on macOS (Intel)
-% python_library_path_user('/usr/local/lib/libpython3.11.dylib').
+% python_library_path_user("/usr/local/lib/libpython3.11.dylib").
 %
 % % pyenv installation
-% python_library_path_user('/home/user/.pyenv/versions/3.11.5/lib/libpython3.11.so').
+% python_library_path_user("/home/user/.pyenv/versions/3.11.5/lib/libpython3.11.so").
 %
 % % Conda environment
-% python_library_path_user('/home/user/miniconda3/envs/myenv/lib/libpython3.11.so').
+% python_library_path_user("/home/user/miniconda3/envs/myenv/lib/libpython3.11.so").
 %
 % % uv-managed Python
-% python_library_path_user('/home/user/.local/share/uv/python/cpython-3.11.5-linux-x86_64-gnu/lib/libpython3.11.so').
+% python_library_path_user("/home/user/.local/share/uv/python/cpython-3.11.5-linux-x86_64-gnu/lib/libpython3.11.so").
 %
 % Uncomment and modify one of the examples above, or add your own:
 %
-% python_library_path_user('/path/to/your/libpython3.X.so').
+% python_library_path_user("/path/to/your/libpython3.X.so").
 
 %% python_home(-Path)
 %
